--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -43,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: .//tmp/sigpatches/CleanSigPatches.zip
+          asset_path: /tmp/sigpatches/CleanSigPatches.zip
           asset_name: CleanSigPatches.zip
           asset_content_type: application/zip
