--- a/.github/workflows/get-version.yml
+++ b/.github/workflows/get-version.yml
@@ -1,6 +1,8 @@
-name: Get Version (Date)
+name: Extract Date
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   extract:
@@ -17,21 +19,23 @@ jobs:
           npm install axios cheerio
       - name: Extract date
         run: |
+          node -e "
           const axios = require('axios');
           const cheerio = require('cheerio');
-
+  
           const url = 'https://sigmapatches.coomer.party/';
-
+  
           axios.get(url).then(response => {
             const $ = cheerio.load(response.data);
-            const field = $('[title="sigpatches"]');
+            const field = $('[title=\"sigpatches\"]');
             if (field.length) {
               const href = field.attr('href');  // get the href attribute
               const date = href.split('?')[1];  // split on '?' and take the second part
               console.log(`Date: ${date}`);
             } else {
-              console.log('Field with title="sigpatches" not found.');
+              console.log('Field with title=\"sigpatches\" not found.');
             }
           }).catch(error => {
             console.error(`Failed to fetch page: ${error}`);
           });
+          "
