--- a/.github/workflows/get-version copy.yml
+++ b/.github/workflows/get-version copy.yml
@@ -17,6 +17,6 @@ jobs:
           content=$(curl -s "$url")
           
           # Use grep to find the line with title="sigpatches" and extract the date
-          date=$(echo "$content" | grep -o 'title="sigpatches".*href="/sigpatches.zip?[0-9]\{2\}\.[0-9]\{2\}\.[0-9]\{4\}' | grep -o '[0-9]\{2\}\.[0-9]\{2\}\.[0-9]\{4\}')
+          date=$(echo "$content" | grep -o '.*href="/sigpatches.zip?[0-9]\{2\}\.[0-9]\{2\}\.[0-9]\{4\}' | grep -o '[0-9]\{2\}\.[0-9]\{2\}\.[0-9]\{4\}'| head -n 1)
           
           echo "Date: $date"
