--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -2,6 +2,10 @@ name: Create Clean SigPatches Release
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        type: string
+        required: true
 
 jobs:
   create-new-release:
@@ -30,10 +34,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
+          tag_name: ${{ inputs.version }}
+          release_name: Release ${{ inputs.version }}
           body: |
-            New release of CleanSigPatches zip.
+            Latest release of CleanSigPatches zip.
           draft: false
           prerelease: false
       - name: Upload release asset
