--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -22,21 +22,18 @@ jobs:
           
           # Use grep to find the line with title="sigpatches" and extract the date
           date_latest=$(echo "$content" | grep -o '.*href="/sigpatches.zip?[0-9]\{2\}\.[0-9]\{2\}\.[0-9]\{4\}' | grep -o '[0-9]\{2\}\.[0-9]\{2\}\.[0-9]\{4\}'| head -n 1)
-          
-          date_my_release="05.27.2023"
-
           echo "Date Latest: $date_latest"
-          echo "Date My Release: $date_my_release"
-
           # Convert to YYYY-MM-DD format
           converted_valid_gnu_date_latest="${date_latest:6:4}-${date_latest:0:2}-${date_latest:3:2}"
-          converted_valid_gnu_date_my_release="${date_my_release:6:4}-${date_my_release:0:2}-${date_my_release:3:2}"
+
+          # TODO read my version/date as my last release version
+          date_my_release="2023-05-07"
           echo "Converted Date Latest: $converted_valid_gnu_date_latest"
-          echo "Converted Date My Release: $converted_valid_gnu_date_my_release"
+          echo "Date My Release: $date_my_release"
 
           # Convert dates to seconds since the UNIX epoch
           date_latest_seconds=$(date -d "$converted_valid_gnu_date_latest" +%s)
-          date_my_release_seconds=$(date -d "$converted_valid_gnu_date_my_release" +%s)
+          date_my_release_seconds=$(date -d "$date_my_release" +%s)
 
           # Compare the integers
           echo "release=false" >> $GITHUB_OUTPUT
