read my version/release from my latest release

--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -26,8 +26,9 @@ jobs:
           # Convert to YYYY-MM-DD format
           converted_valid_gnu_date_latest="${date_latest:6:4}-${date_latest:0:2}-${date_latest:3:2}"
 
-          # TODO read my version/date as my last release version
-          date_my_release="2023-05-07"
+          # read my version/date as my last release version
+          date_my_release=$(curl -s https://api.github.com/repos/abelmarkus/cleansigpatch/releases/latest | jq -r '.tag_name')
+          
           echo "Converted Date Latest: $converted_valid_gnu_date_latest"
           echo "Date My Release: $date_my_release"
 
