--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -15,6 +15,7 @@ jobs:
         id: check_version
         run: |
           # URL of the webpage you want to extract from
+          #url="https://sigmapatches.su/"
           url="https://sigmapatches.coomer.party/"
           
           # Use curl to get the webpage content
@@ -23,28 +24,33 @@ jobs:
           # Use grep to find the line with title="sigpatches" and extract the date
           date_latest=$(echo "$content" | grep -o '.*href="/sigpatches.zip?[0-9]\{2\}\.[0-9]\{2\}\.[0-9]\{4\}' | grep -o '[0-9]\{2\}\.[0-9]\{2\}\.[0-9]\{4\}'| head -n 1)
           echo "Date Latest: $date_latest"
-          # Convert to YYYY-MM-DD format
-          converted_valid_gnu_date_latest="${date_latest:6:4}-${date_latest:0:2}-${date_latest:3:2}"
-
-          # read my version/date as my last release version
-          date_my_release=$(curl -s https://api.github.com/repos/abelmarkus/cleansigpatch/releases/latest | jq -r '.tag_name')
-          
-          echo "Converted Date Latest: $converted_valid_gnu_date_latest"
-          echo "Date My Release: $date_my_release"
-
-          # Convert dates to seconds since the UNIX epoch
-          date_latest_seconds=$(date -d "$converted_valid_gnu_date_latest" +%s)
-          date_my_release_seconds=$(date -d "$date_my_release" +%s)
-
-          # Compare the integers
-          echo "release=false" >> $GITHUB_OUTPUT
-          if [ $date_latest_seconds -gt $date_my_release_seconds ]
-          then
-              echo "Latest is newer then my release, dispatching new release..."
-              echo "release=true" >> $GITHUB_OUTPUT
-              echo "version=$converted_valid_gnu_date_latest" >> $GITHUB_OUTPUT
+          if [ -n "$date_latest" ]; then
+            # Convert to YYYY-MM-DD format
+            converted_valid_gnu_date_latest="${date_latest:6:4}-${date_latest:0:2}-${date_latest:3:2}"
+  
+            # read my version/date as my last release version
+            date_my_release=$(curl -s https://api.github.com/repos/abelmarkus/cleansigpatch/releases/latest | jq -r '.tag_name')
+            
+            echo "Converted Date Latest: $converted_valid_gnu_date_latest"
+            echo "Date My Release: $date_my_release"
+  
+            # Convert dates to seconds since the UNIX epoch
+            date_latest_seconds=$(date -d "$converted_valid_gnu_date_latest" +%s)
+            date_my_release_seconds=$(date -d "$date_my_release" +%s)
+  
+            # Compare the integers
+            echo "release=false" >> $GITHUB_OUTPUT
+            if [ $date_latest_seconds -gt $date_my_release_seconds ]
+            then
+                echo "Latest is newer then my release, dispatching new release..."
+                echo "release=true" >> $GITHUB_OUTPUT
+                echo "version=$converted_valid_gnu_date_latest" >> $GITHUB_OUTPUT
+            else
+                echo "Nothing to do here!"
+            fi
           else
-              echo "Nothing to do here!"
+            echo "ERROR: Date Latest is empty!"
+            exit 1
           fi
 
       - name: Dispatch a new release creation
