--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -31,23 +31,32 @@ jobs:
           
       - name: Create release
         id: create_release
-        uses: actions/create-release@v1
+        # uses: actions/create-release@v1
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # with:
+        #   tag_name: ${{ inputs.version }}
+        #   release_name: Release ${{ inputs.version }}
+        #   body: |
+        #     Latest release of CleanSigPatches zip.
+        #   draft: false
+        #   prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ inputs.version }}
-          release_name: Release ${{ inputs.version }}
-          body: |
-            Latest release of CleanSigPatches zip.
-          draft: false
-          prerelease: false
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create ${{ inputs.version }} /tmp/sigpatches/CleanSigPatches.zip --notes "Latest release of CleanSigPatches zip."
+
       - name: Upload release asset
         id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+        # uses: actions/upload-release-asset@v1
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # with:
+        #   upload_url: ${{ steps.create_release.outputs.upload_url }}
+        #   asset_path: /tmp/sigpatches/CleanSigPatches.zip
+        #   asset_name: CleanSigPatches.zip
+        #   asset_content_type: application/zip
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: /tmp/sigpatches/CleanSigPatches.zip
-          asset_name: CleanSigPatches.zip
-          asset_content_type: application/zip
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload ${{ inputs.version }} /tmp/sigpatches/CleanSigPatches.zip
